--- a/estilos/style.css
+++ b/estilos/style.css
@@ -11,6 +11,7 @@ body, html {
     width: 100vw;
     box-sizing: border-box;
     background-color:#0D0D0D;
+    overflow: hidden;
 }
 
 header {
@@ -112,9 +113,11 @@ div.imagem {
 div.icons {
     display: block;
     background-color: #747F8C;
-    padding: 10px;
-    text-align: center;
+    height: 40px;
+    margin: auto;
     margin: 10px;
+    padding: 20px;
+    text-align: center;
     border-radius: 10px;
     overflow: hidden;
 }
